# img2dwg

./: .ezdxfrc  .gitignore  .gitleaks.toml  MODEL_SELECTION_AND_TRAINING_GUIDE.md  README.md  REVIEW_GUIDE.md  main.py  pyproject.toml  qwen2.5_vl_finetuning_guide.md  vlm_research_findings.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: secret-scan.yml  sync-issue-status-on-develop-merge.yml  sync-issue-status-on-merge.yml
.windsurf/rules/: architecture.md  development-guide.md
.windsurf/workflows/: convert-dwg.md  generate-dataset.md  lint-fix.md  scan-data.md  test-all.md
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  NEXT_STEPS.md  ODAFC_INSTALLATION.md  WINDSURF_GUIDE.md  image-url-guide.md  issue-status-lifecycle.md  linear-agent-comment-system-prompt.md  multi-image-dataset.md  optimization-guide.md  publisher.md  pythonic-and-strategy-guide.md  refactor-common-plan.md  token-length-guide.md  token-optimization-summary.md  ved-research.md  ved-test-strategy.md
docs/logs/: pai-73-final-benchmark-summary.md
docs/pr/: pai-73-coderabbit-pass2-merge-checklist.md  pai-73-coderabbit-pass2-pr-body.md  two-stage-v103-compact-midband-relief-pr-body.md
docs/reports/: web-image2cad-v1-expanded-strategy-report-2026-03-08.md
eval/examples/: benchmark_metadata.json  (+1 more)
examples/: debug_odafc.py  json_to_dwg.py  simple_convert.py  simple_image_process.py  test_image_upload.py  test_layout_analysis.py  test_odafc.py  test_optimization.py  test_token_count.py
scripts/: benchmark_compaction.py  benchmark_strategies.py  convert_dataset_to_qwen_format.py  convert_dwg.py  evaluate_ved.py  export_triad_artifacts.py  extract_benchmark_highlights.py  fetch_web_benchmark_assets.py  fetch_web_floorplan_assets.py  generate_dataset.py  guardian_premerge_gate.sh  inference_ved.py  run_grid_artifact_regression.py  run_training.sh  scan_data.py  smoke_web_publishers.py  static_gate_changed.sh  sync_issue_status.py  train_qwen2.5_vl.py  train_ved.py  validate_ved_dataset_images.py  verify_pai73_benchmark_summary_sync.py  web_gradio.py  web_streamlit.py  web_streamlit_app.py  zero2.json
tests/: test_benchmark_metadata_manifest.py  test_benchmark_output_dir_isolation.py  test_benchmark_report.py  test_benchmark_strategies_script.py  test_cli_bool_flags.py  test_consensus_axis_escape_unique_coord_lift.py  test_consensus_v100_default_axis_pocket_relief.py  test_consensus_v107_axis_jitter_bias_break.py  test_consensus_v108_midband_residual_degrid_relief.py  test_consensus_v109_near_square_residual_degrid_relief.py  test_consensus_v110_high_texture_midband_relief.py  test_consensus_v111_near_square_high_complexity_degrid.py  test_consensus_v114_default_band_bridge_relief.py  test_consensus_v115_near_square_default_band_expansion.py  test_consensus_v123_default_score_elongated_low_edge_bridge.py  test_consensus_v124_default_score_midskew_midedge_relief.py  test_consensus_v125_default_score_midskew_lowedge_relief.py  test_consensus_v126_default_score_midskew_midedge_extension.py  test_consensus_v128_near_square_low_edge_default_bridge.py  test_consensus_v129_near_square_midedge_default_fallback.py  test_consensus_v134_near_square_midedge_bridge_expansion.py  test_consensus_v135_base_offgrid_floor.py  test_consensus_v136_default_band_coord_diversity_lift.py  test_consensus_v136_default_band_low_edge_bridge.py  test_consensus_v137_near_square_lowedge_bridge.py  test_consensus_v138_default_band_tail_segments.py  test_consensus_v139_default_band_micro_zig.py  test_consensus_v139_high_midskew_default_band_tail_unlock.py  test_consensus_v140_midskew_dense_consensus_bridge.py  test_consensus_v147_midskew_default_band_bridge_tail.py  test_consensus_v165_default_band_axis_escape_pairs.py  test_consensus_v58_confidence_boost.py  test_consensus_v63_corridor_tail_boost.py  test_consensus_v65_confident_corridor_tail.py  test_consensus_v70_skew_complexity_lift.py  test_consensus_v73_mid_conf_corridor_texture_relief.py  test_consensus_v74_bridge_mid_confidence_relief.py  test_consensus_v75_skew_complexity_interaction.py  test_consensus_v78_axis_lock_proxy_relief.py  test_consensus_v79_moderate_corridor_relief.py  (+153 more)
(+71 files in other folders)
