[project]
name = "img2dwg"
version = "0.1.0"
description = "Vision Encoder-Decoder 기반 이미지→DWG 변환 도구"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "ezdxf>=1.3.0",
    "pillow>=10.0.0",
    "opencv-python>=4.9.0",
    "pytesseract>=0.3.10",
    "openai>=1.12.0",
    "tiktoken>=0.11.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    # Vision Encoder-Decoder 학습용 라이브러리
    "torch==2.2.2",
    "torchvision==0.17.2",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "datasets>=2.18.0",
    "evaluate>=0.4.1",
    "tensorboard>=2.15.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    "hf-xet>=1.1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.13.2",
    "mypy>=1.18.2",
]

web = [
    "gradio>=5.0.0",
    "streamlit>=1.40.0",
]

# Vision Encoder-Decoder 학습용 추가 의존성
ved = [
    "wandb>=0.16.0",  # 실험 추적
    "jupyter>=1.0.0",  # 노트북 환경
    "matplotlib>=3.8.0",  # 시각화
    "seaborn>=0.13.0",  # 고급 시각화
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/img2dwg",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ezdxf.*",
    "cv2.*",
    "pytesseract.*",
    "transformers.*",
    "torch.*",
    "torchvision.*",
    "accelerate.*",
    "datasets.*",
    "evaluate.*",
]
ignore_missing_imports = true
